--- a/To-do-list-microservices/docker-compose.yml
+++ b/To-do-list-microservices/docker-compose.yml
@@ -6,19 +6,23 @@ services:
     networks:
       - backend
       - frontend
+    ports:
+      - 5000:5000
   api-todo:
     build:
-      context: ./api-node-todo
+      context: ./api-graphql
     networks:
       - backend
       - frontend
+    ports:
+      - 4000:4000
   web:
     build:
-      context: ./web-todo
+      context: ./web
     networks:
       - frontend
     ports:
-      - 8080:5000
+      - 8080:80
   
 networks: 
   backend:
