--- a/To-do-list-microservices/api-graphql/package.json
+++ b/To-do-list-microservices/api-graphql/package.json
@@ -3,15 +3,16 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/jsonwebtoken": "^8.5.0",
       "@types/node": "^8.0.29",
       "nodemon": "^2.0.4",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "apollo-server": "^2.18.1",
-      "apollo-server-express": "^2.18.2",
+      "apollo-server-express": "^2.19.1",
       "class-validator": "^0.12.2",
+      "jsonwebtoken": "^8.5.1",
       "mongodb": "^3.0.8",
       "reflect-metadata": "^0.1.10",
       "sqlite3": "^5.0.0",
