--- a/To-do-list-microservices/api-graphql/package.json
+++ b/To-do-list-microservices/api-graphql/package.json
@@ -12,6 +12,7 @@
    "dependencies": {
       "apollo-server-express": "^2.19.1",
       "class-validator": "^0.12.2",
+      "cors": "^2.8.5",
       "jsonwebtoken": "^8.5.1",
       "mongodb": "^3.0.8",
       "reflect-metadata": "^0.1.10",
