--- a/.github/workflows/DeployToNetlify.yml
+++ b/.github/workflows/DeployToNetlify.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: '12'
       - run: npm install ./To-do-list-microservices/todo-site
-      - run: npm run build ./To-do-list-microservices/todo-site
+      - run: npm build ./To-do-list-microservices/todo-site
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.1
