--- a/.github/workflows/DeployToNetlify.yml
+++ b/.github/workflows/DeployToNetlify.yml
@@ -12,8 +12,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '12'
-      - run: npm install ./To-do-list-microservices/todo-site
-      - run: npm build ./To-do-list-microservices/todo-site
+      - run: |-
+          cd ./To-do-list-microservices/todo-site
+          npm install
+          npm run build
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.1
