--- a/.github/workflows/DeployToNetlify.yml
+++ b/.github/workflows/DeployToNetlify.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.1
         with:
-          publish-dir: './public'
+          publish-dir: './To-do-list-microservices/todo-site/public'
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
