--- a/.github/workflows/DeployTodoHeroku.yml
+++ b/.github/workflows/DeployTodoHeroku.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: DeployTodoService
 
 on:
   push:
@@ -15,4 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "vast-earth-39107" 
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          usedocker: true
           appdir: "To-do-list-microservices/api-graphql"
