--- a/To-do-list-microservices/api-graphql/Dockerfile
+++ b/To-do-list-microservices/api-graphql/Dockerfile
@@ -1,5 +1,9 @@
 FROM node:12-slim
 
+RUN apt-get -y update
+RUN apt-get -y upgrade
+RUN apt-get install -y sqlite3 libsqlite3-dev
+
 WORKDIR /usr/src/app
 
 COPY package*.json ./
