--- a/To-do-list-microservices/docker-compose.yml
+++ b/To-do-list-microservices/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - backend
       - frontend
     ports:
-      - 80:5000
+      - 80:80
   api-todo:
     build:
       context: ./api-graphql
@@ -16,13 +16,14 @@ services:
       - frontend
     ports:
       - 4000:4000
-  web:
-    build:
-      context: ./todo-site
-    networks:
-      - frontend
-    ports:
-      - 8080:80
+
+  # web:
+  #   build:
+  #     context: ./todo-site
+  #   networks:
+  #     - frontend
+  #   ports:
+  #     - 8080:80
   
 networks: 
   backend:
