--- a/To-do-list-microservices/api-graphql/package.json
+++ b/To-do-list-microservices/api-graphql/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/jaeger-client": "^3.18.1",
       "@types/jsonwebtoken": "^8.5.0",
       "@types/node": "^8.0.29",
       "nodemon": "^2.0.4",
@@ -13,6 +14,7 @@
       "apollo-server-express": "^2.19.1",
       "class-validator": "^0.12.2",
       "cors": "^2.8.5",
+      "jaeger-client": "^3.18.1",
       "jsonwebtoken": "^8.5.1",
       "mongodb": "^3.0.8",
       "reflect-metadata": "^0.1.10",
