--- a/To-do-list-microservices/k8s/auth-depl.yaml
+++ b/To-do-list-microservices/k8s/auth-depl.yaml
@@ -20,5 +20,10 @@ spec:
         - containerPort: 80
         resources:
           requests:
-             cpu: 100m
-        
+            cpu: 100m
+        # env:
+        #   - name: ...
+        #     valueFrom:
+        #       secretKeyRef:
+        #         name: ...
+        #         key: ...
