--- a/To-do-list-microservices/docker-compose.yml
+++ b/To-do-list-microservices/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   auth-service:
     build: ./go-auth
-    command: air
+    # command: air
     volumes:
       - ./go-auth:/src/
     networks:
@@ -10,6 +10,8 @@ services:
       - frontend
     ports:
       - 80:80
+    expose:
+      - 80
   api-todo:
     build:
       context: ./api-graphql
@@ -18,7 +20,26 @@ services:
       - frontend
     ports:
       - 4000:4000
+    expose:
+      - 4000
 
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - 3001:3000
+    networks:
+      - backend
+    expose:
+      - 3000
+
+  prom-server:
+    image: prom/prometheus:latest
+    ports:
+      - 9090:9090
+    networks:
+      - backend
+    volumes:
+      - ./prom/prometheus.yml:/etc/prometheus/prometheus.yml
   # jaeger:
     # 
 
@@ -33,5 +54,6 @@ services:
 networks: 
   backend:
     driver: bridge
+    external: true
   frontend:
     driver: bridge
