--- a/Event-driven/product/Dockerfile.hotreload
+++ b/Event-driven/product/Dockerfile.hotreload
@@ -3,14 +3,13 @@ FROM golang:1.17-alpine
 RUN apk add build-base
 RUN apk --no-cache add make git gcc libtool musl-dev ca-certificates dumb-init 
 # ENV CGO_ENABLED=0
-RUN go env -w GOPRIVATE=""
+# RUN go env -w GOPRIVATE=""
 
 WORKDIR /go/src/product
-COPY . .
-RUN go mod download
-
-RUN go build .
+# COPY . .
+# RUN go mod download
+RUN go get github.com/pilu/fresh
 
 EXPOSE 5000
 
-CMD ["./product"]
+CMD ["fresh"]
