--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 To-do-list-microservices/go-auth/tmp
 To-do-list-microservices/go-auth/bin/air
 Event-driven/product/tmp/runner-build
+Event-driven/booking/tmp/runner-build
