--- a/Event-driven/Makefile
+++ b/Event-driven/Makefile
@@ -3,6 +3,7 @@ start:
 	docker-compose up -d
 	cd product && docker-compose -f docker-compose.hotreload.yml up -d
 	cd booking && docker-compose -f docker-compose.hotreload.yml up -d
+	cd payment && docker-compose -f docker-compose.hotreload.yml up -d
 	cd kong && make kong-postgres
 
 # startwb:
@@ -12,10 +13,11 @@ down:
 	docker-compose down
 	cd product && docker-compose -f docker-compose.hotreload.yml down
 	cd booking && docker-compose -f docker-compose.hotreload.yml down
+	cd payment && docker-compose -f docker-compose.hotreload.yml down
 	cd kong && make clean
 
-test:
-	echo "not implemented yet"
+# test:
+# 	echo "not implemented yet"
 
 clean:
 	docker-compose kill
@@ -27,10 +29,14 @@ clean:
     # -e KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181 \
     # bitnami/kafka:latest kafka-topics.sh --list  --bootstrap-server kafka:9092
 
-kafka_test:
-    docker run -it --rm \ 
-		--network backend \ 
-		-e KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181 \
-    bitnami/kafka:latest kafka-console-producer.sh \
-		--topic booking --broker-list kafka:9092
+# kafka_test:
+#     docker run -it --rm \ 
+# 		--network backend \ 
+# 		-e KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181 \
+#     bitnami/kafka:latest kafka-console-producer.sh \
+# 		--topic booking --broker-list kafka:9092
+
+# docker run -it --rm --network backend -e KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181 \
+# bitnami/kafka:latest kafka-console-consumer.sh \
+# --topic booking --from-beginning --bootstrap-server kafka:9092
     
