--- a/Event-driven/docker-compose.yml
+++ b/Event-driven/docker-compose.yml
@@ -52,6 +52,14 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
 
+  jaeger:
+    image: jaegertracing/all-in-one:1.28
+    ports:
+      - "6831:6831/udp"
+      - "16686:16686"
+    networks:
+      - backend
+
 volumes:
   zookeeper_data:
     driver: local
