--- a/Event-driven/docker-compose.yml
+++ b/Event-driven/docker-compose.yml
@@ -42,6 +42,9 @@ services:
       - backend
     expose:
       - 3000
+    volumes:
+      - ./grafana/config/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - ./grafana/config/provisioning/dashboards:/etc/grafana/provisioning/dashboards
 
   prom-server:
     image: prom/prometheus:latest
