--- a/Event-driven/grafana/config/provisioning/datasources/datasource.yml
+++ b/Event-driven/grafana/config/provisioning/datasources/datasource.yml
@@ -3,4 +3,8 @@ apiVersion: 1
 datasources:
   - name: Prometheus
     type: prometheus
-    url: prom-server:9090
+    url: http://prom-server:9090
+  - name: Jaeger
+    type: jaeger
+    access: proxy
+    url: http://jaeger:16686
